<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstTry</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bAdd">Add One </string>
    <string name="bSub">Subtract One</string>
    <string name="total">The Total is 0</string>
    <string name="bResultText">Try Command</string>
    <string name="tvResultText">invalid</string>
    <string name="etHint">Type a command</string>
    <string name="tBText">Toggle Button</string>
    <string name="textView1">Email address:</string>
    <string name="textView2">Information:</string>
    <string name="textView3">Person\'s Name:</string>
    <string name="textView4">Text</string>
    <string name="textView5">Text</string>
    <string name="textView6">Text</string>
    <string name="bText">Send Email</string>
    <string name="et1Hint"></string>
    <string name="et2Hint"></string>
    <string name="et3Hint"></string>
    <string name="et4Hint"></string>
    <string name="et5Hint"></string>
    <string name="et6Hint"></string>
    <string name="bSetWall">Set Wallpaper</string>
    <string name="ibContentDesc">Image Button</string>
    <string name="ivContentDesc">Image View</string>
    <string name="camera_app_name">Camera App</string>
    <string name="bStartAct">StartActivity</string>
    <string name="bStartActRes">StartActivityforResults</string>
    <string name="tvGot">Text View</string>
    <string name="etSendHint"/>
    <string name="tv1Send">Ahsan is:</string>
    <string name="tv2Send">TextView</string>
    <string name="rb1Send">Crazy</string>
    <string name="rb2Send">Intelligent</string>
    <string name="rb3Send">Both</string>
    <string name="bReturn">Return</string>
    <string name="itemAboutUs">About Us</string>
    <string name="itemPref">Preference</string>
    <string name="textAboutUs">To love someone is a natural instinct, but to be loved by someone is life</string>
    <string name="itemExit">Exit</string>
    <string name="etpTitle">EditText</string>
    <string name="etpSummary">Enter Your Name</string>
    <string name="cbSummary">for the splash screen</string>
    <string name="cbTitle">Music</string>
    <string name="listTitle">list</string>
    <string name="listSummary">This is a list to choose from</string>
    <string name="tvTextMain">Hello!</string>
    <string name="cbTextSliding">Checkbox</string>
    <string name="bHandleText">Handle</string>
    <string name="bSliding1Text">Handle</string>
    <string name="bSliding2Text">Handle</string>
    <string name="bSliding3Text">Handle</string>
    <string name="bSliding4Text">Handle</string>
    <string name="tv1Text">TextView 1</string>
    <string name="tv2Text">TextView 2</string>
    <string name="tv3Text">TextView 3</string>
    <string name="b1TabText">Start</string>
    <string name="b2TabText">Stop</string>
    <string name="bAddTabText">Add a Tab</string>
    <string name="etURLHint">Type URL here</string>
    <string name="bGoText">Go</string>
    <string name="bBackText">Go Back a Page</string>
    <string name="bForwardText">Go Forward</string>
    <string name="bRefreshText">Refresh Page</string>
    <string name="bHistoryText">Clear History</string>
    <string name="tv1FlipperText">Flipper 1</string>
    <string name="tv2FlipperText">Flipper 2</string>
    <string name="bFlipperText">Button</string>
    <string name="tv3FlipperText">Flipper 3</string>
    <string name="bLoadText">Load</string>
    <string name="bSaveText">Save</string>
    <string name="etSPHint"/>
    <string name="tvSPText">Load your data</string>
    <string name="tvCanWriteText">TextView</string>
    <string name="tvCanReadText">TextView</string>
    <string name="tvSaveAsText">Save As...</string>
    <string name="etSaveAsHint"/>
    <string name="bConfirmText">Confirm</string>
    <string name="bSaveFileText">Save</string>
    <string name="tvSQLNameText">Name</string>
    <string name="tvSQLHotnessText">Hotness scale 1 to 10</string>
    <string name="etSQLNameHint"/>
    <string name="etSQLHotnessHint"/>
    <string name="bSQLUpdateText">Update SQLite Database</string>
    <string name="bSQLOpenViewText">View</string>
    <string name="tvNamesText">Names</string>
    <string name="tvHotnessText">Hotness</string>
    <string name="tvSQLinfoText">get info from db</string>
    <string name="tvSQLrowInfoText">Enter Row ID</string>
    <string name="bGetInfoText">Get Information</string>
    <string name="bSQLModifyText">Edit Entry</string>
    <string name="bSQLdeleteText">Delete Entry</string>
    

</resources>