<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvSQLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSQLNameText" />

    <EditText
        android:id="@+id/etSQLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etSQLNameHint"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/tvSQLHotness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSQLHotnessText" />

    <EditText
        android:id="@+id/etSQLHotness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etSQLHotnessHint"
        android:ems="10" />

    <Button
        android:id="@+id/bSQLUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSQLUpdateText" />

    <Button
        android:id="@+id/bSQLOpenView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSQLOpenViewText" />

    <TextView
        android:id="@+id/tvSQLrowInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSQLrowInfoText" />

    <EditText
        android:id="@+id/etSQLrowInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >    
    </EditText>

    <Button
        android:id="@+id/bgetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bGetInfoText" />

    <Button
        android:id="@+id/bSQLModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSQLModifyText" />

    <Button
        android:id="@+id/bSQLdelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSQLdeleteText" />

</LinearLayout>