<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:weightSum="100" >
	<ScrollView 
	    android:layout_weight="30"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView1" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et1Hint"
            android:ems="10" />
      
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView2" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et2Hint"
            android:ems="10" />

        <TextView
            android:id="@+id/textView3"
            android:text="@string/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et3Hint"
            android:ems="10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView4" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et4Hint"
            android:ems="10" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView5" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et5Hint"
            android:ems="10" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView6" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et6Hint"
            android:ems="10" />
        </LinearLayout>
        </ScrollView>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="40" >

        <Button
            android:id="@+id/bSendEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bText" />
		</LinearLayout>
		
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="30"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <AnalogClock
            android:id="@+id/analogClock1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    	</LinearLayout>
    </LinearLayout>
