<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvCanWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCanWriteText" />

    <TextView
        android:id="@+id/tvCanRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCanReadText" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/tvSaveAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSaveAsText" />

    <EditText
        android:id="@+id/etSaveAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etSaveAsHint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bConfirmSaveAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bConfirmText" />

    <Button
        android:id="@+id/bSaveFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSaveFileText"
        android:visibility="invisible" />

</LinearLayout>