<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etSPHint"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/bSaveSP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSaveText" />

    <Button
        android:id="@+id/bLoadSP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bLoadText" />

    <TextView
        android:id="@+id/tvSP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSPText" />

</LinearLayout>