<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bSliding1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bSliding1Text" />

        <Button
            android:id="@+id/bSliding2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bSliding2Text" />

        <Button
            android:id="@+id/bSliding3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bSliding3Text" />

        <Button
            android:id="@+id/bSliding4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bSliding4Text" />
    </LinearLayout>

    <SlidingDrawer
        android:id="@+id/slidingD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <Button
            android:id="@+id/handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bHandleText" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/cbSLidable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbTextSliding" />
        </LinearLayout>
    </SlidingDrawer>

</FrameLayout>